correction contraste

--- a/style.css
+++ b/style.css
@@ -816,20 +816,20 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #97390c;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #97390c;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #97390c!important;
     color: #FFFFFF!important;
 }
 
@@ -842,7 +842,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #97390c!important;
 }
 
 .ltc-atomic-tangerine:hover {
